Reviewing is functional, search doesn't work

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,21 @@
     {% endif %}
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container-fluid ">
         {% from 'bootstrap5/nav.html' import render_nav_item %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 sticky-top">
-            <a class="navbar-brand" href="{{url_for('index') }}">Book reviews</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-secondary mb-3 sticky-top">
+            <a class="navbar-brand ms-2" href="{{url_for('index') }}" >Book reviews</a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+            {% if request.endpoint == 'index' %}
+            <form class="d-flex" method="GET" action="{{ url_for('index') }}">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Pretraži</button>
+              </form>
+            {% endif %}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
@@ -69,7 +75,7 @@
         {% block body %}
         {% endblock %}
 
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4">
             <p class="col-md-6 mb-0 text-body-secondary">Book reviews</p>
         </footer>
     </div>
@@ -103,9 +109,9 @@
         deleteModal.addEventListener('show.bs.modal', function (event) {
             // Button that triggered the modal
             const button = event.relatedTarget;
-            // Extract post ID from data-* attributes
-            const bookId = button.getAttribute('data-bookid');
-            // Update the form action to include the correct post ID
+            // Extract review ID from data-* attributes
+            const bookId = button.getAttribute('data-reviewid');
+            // Update the form action to include the correct review ID
             const deleteForm = document.getElementById('deleteForm');
             deleteForm.action = `/review/delete/${bookId}`;
         });
