--- a/templates/index.html
+++ b/templates/index.html
@@ -10,20 +10,38 @@
 
 
 <ul class="col-8 list-unstyled">
-    {% for review in reviews %}
-    <li>
-        <h2><a href="{{ url_for('review_view', review_id=review['_id']) }}" class="text-dark text-decoration-none">{{ post.title }}</a></h2>
-		{% if review.image_id %}
-		<img src="{{ url_for('serve_image', image_id=review.image_id) }}" class="img-fluid" alt="Knjiga">
-		{% endif %}        
-		<p><strong>Autor recenzije:</strong> {{ review.author }} - {{ review.date.strftime('%d.%m.%Y') }}</p>
-        <p class="mt-2">{% for tag in review.tags.split(',') %}
-            <span class="badge bg-primary">{{ tag }}</span>
-        {% endfor %}</p>
-        <p>{{ review.content | markdown | safe }}</p>
+    {% if titles_with_reviews %}
+        {% for title_info in titles_with_reviews %}
+        <div class="mb-5">
+            <h2 class="text-dark">{{ title_info.title }}</h2>
+            <h3 class="text-dark">{{ title_info.author }}</h3>
+
+            {% if title_info.reviews %}
+                <ul class="list-unstyled">
+                    {% for review in title_info.reviews %}
+                    <li class="mb-3 p-3 col-12 border border-dark rounded">
+                        <p><strong>Autor recenzije: </strong> {{ review['author'] }} - <strong>Datum:</strong> {{ review['date'].strftime('%d.%m.%Y') }}</p>
+
+                        {% if review['image_id'] %}
+                        <img src="{{ url_for('serve_image', image_id=review['image_id']) }}" class="img-fluid" alt="Slika knjige">
+                        {% endif %}
+
+                        <p>{{ review['content'] | truncate(200) }}</p>
+                        <a href="{{ url_for('review_view', review_id=review['_id']) }}">Pročitaj više</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>Trenutno nema recenzija za ovaj naslov.</p>
+            {% endif %}
+        </div>
+        <br>
         <hr>
-    </li>
-    {% endfor %}    
+        {% endfor %}
+    {% else %}
+        <p>Trenutno nema objavljenih recenzija.</p>
+        
+    {% endif %}
 </ul>
 
 {% endblock %}
