--- a/templates/my_reviews.html
+++ b/templates/my_reviews.html
@@ -11,11 +11,12 @@
 
 <h2>Moje recenzije</h2>
 
-{% if posts %}
+{% if reviews %}
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Naslov i autor knjige</th>
+            <th>Naslov</th>
+            <th> Autor</th>
             <th>Datum</th>
             <th>Status</th>
             <th>Tagovi</th>
@@ -26,6 +27,8 @@
         {% for review in reviews %}
         <tr>
             <td><a href="{{ url_for('review_view', review_id=review['_id']) }}" class="text-dark text-decoration-none">{{ review.title }}</a></td>
+            <td>{{ review.author }}</td>
+            <td>{{ review.review_author }}</td>
             <td>{{ review.date.strftime('%d.%m.%Y') }}</td>
             <td>{{ review.status | localize_status }}</td>
             <td>{% for tag in review.tags.split(',') %}<span class="badge bg-primary">{{ tag }}</span>{% endfor %}</td>
