--- a/templates/review_view.html
+++ b/templates/review_view.html
@@ -18,7 +18,7 @@
             <span class="badge bg-primary">{{ tag }}</span>
         {% endfor %}</p>
         <p class="mt-5 text-center ">{{ review.content | markdown | safe }}</p>
-        {% if edit_review_permission(review['_id']).can() %}
+        {% if can_edit_review(review['_id']) %}
         <div>
             <a href="{{ url_for('review_edit', review_id=review['_id']) }}" type="button" class="btn btn-primary btn-sm">Uredi</a>
             <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteModal"
