--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     {% block head %}
     <title>{% block title %}{% endblock %}Book reviews</title>
-        {% block styles %}
-            {{ bootstrap.load_css() }}
-        {% endblock %}    
+    {% block styles %}
+    {{ bootstrap.load_css() }}
+    {% endblock %}
     {% endblock %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     {% if current_user.theme %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/{{current_user.theme}}/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/{{current_user.theme}}/bootstrap.min.css">
     {% endif %}
 </head>
+
 <body class="d-flex flex-column min-vh-100">
     <div class="container-fluid ">
         {% from 'bootstrap5/nav.html' import render_nav_item %}
-        <nav class="navbar navbar-expand-lg navbar-light bg-secondary mb-3 sticky-top">
-            <a class="navbar-brand ms-2" href="{{url_for('index') }}" >Book reviews</a>
-            
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3 sticky-top shadow-sm">
+            <a class="navbar-brand ms-4 text-primary" href="{{url_for('index') }}">Book reviews</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,8 +32,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
-                    {{ render_nav_item('review_create', 'Nova recenzija', _use_li = True) }}
-                    {{ render_nav_item('my_reviews', 'Moje recenzije', _use_li = True) }}
+
+                    <a class="text-primary">{{ render_nav_item('review_create', 'Nova recenzija', _use_li = True) }}</a>
+                    <a class="text-primary">{{ render_nav_item('my_reviews', 'Moje recenzije', _use_li = True) }}</a>
+
                     {%endif%}
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -42,31 +47,36 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item icon-link" href="{{url_for('profile') }}"><i class="bi bi-person mb-2"></i>Profil</a>
+                                <a class="dropdown-item icon-link" href="{{url_for('profile') }}"><i
+                                        class="bi bi-person mb-2"></i>Profil</a>
                             </li>
                             {% if current_user.is_admin %}
                             <li>
-                                <a class="dropdown-item icon-link" href="{{url_for('users') }}"><i class="bi bi-people mb-2"></i>Korisnici</a>
+                                <a class="dropdown-item icon-link" href="{{url_for('users') }}"><i
+                                        class="bi bi-people mb-2"></i>Korisnici</a>
                             </li>
                             {% endif %}
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item icon-link" href="{{url_for('logout') }}"><i class="bi bi-box-arrow-right mb-2"></i>Odjava</a></li>
+                            <li><a class="dropdown-item icon-link" href="{{url_for('logout') }}"><i
+                                        class="bi bi-box-arrow-right mb-2"></i>Odjava</a></li>
                         </ul>
                     </li>
                     {% else %}
-                    {{ render_nav_item('login', 'Prijava', _use_li = True) }}
-                    {{ render_nav_item('register', 'Registracija', _use_li = True) }}
+
+                    <a class="text-primary ms-4">{{ render_nav_item('login', 'Prijava', _use_li = True) }}</a>
+                    <a class="text-primary ms-4">{{ render_nav_item('register', 'Registracija', _use_li = True) }}</a>
+
                     {% endif %}
                     </li>
                 </ul>
             </div>
-        </nav>      
+        </nav>
 
         {% from 'bootstrap5/utils.html' import render_messages %}
         {{ render_messages(container=False, dismissible=True) }}
-        
+
         {% block body %}
         {% endblock %}
 
@@ -98,7 +108,7 @@
             </div>
         </div>
     </div>
-    
+
     <script>
         const deleteModal = document.getElementById('deleteModal');
         deleteModal.addEventListener('show.bs.modal', function (event) {
@@ -112,4 +122,5 @@
         });
     </script>
 </body>
+
 </html>
