--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,27 +2,36 @@
 
 {% block title %}Vaš profil{% endblock %}
 {% block head %}
-	{{ super() }}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
+{{ super() }}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
 {% endblock %}
+<div class="container-fluid">
+    {% block body %}
+    {% from 'bootstrap5/form.html' import render_form %}
+    <h2>{{ title }}</h2>
 
-{% block body %}
-{% from 'bootstrap5/form.html' import render_form %}
-<h2>{{ title }}</h2>
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-11 col-xl-10">
 
-<div class="row">
-    <div class="col-6">{{ render_form(form) }}</div>
-    <div class="col-6">
-        {% if image_id %}
-        <img src="{{ url_for('serve_image', image_id=image_id) }}" class="img-thumbnail" style="max-width: 250px;" alt="User photo">
-        {% endif %}
+                <div class="col-6">{{ render_form(form) }}</div>
+                <div class="col-6">
+                    {% if image_id %}
+                    <img src="{{ url_for('serve_image', image_id=image_id) }}" class="img-thumbnail"
+                        style="max-width: 250px;" alt="User photo">
+                    {% endif %}
+
+                </div>
+            </div>
+        </div>
     </div>
+
+    {% endblock %}
 </div>
-{% endblock %}
 {% block scripts %}
-	{{ super() }}
-    <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
-    <script>
-        var easyMDE = new EasyMDE({ element: document.getElementById('markdown-editor') });
-    </script>
+{{ super() }}
+<script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
+<script>
+    var easyMDE = new EasyMDE({ element: document.getElementById('markdown-editor') });
+</script>
 {% endblock %}
